demo/web-service-mvp.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-pos-mvp
spec:
  selector:
    matchLabels:
      app: demo-pos-mvp # has to match .spec.template.metadata.labels
  serviceName: "demo-pos-mvp"
  replicas: 2 # by default is 1
  updateStrategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: demo-pos-mvp # has to match .spec.selector.matchLabels
    spec:
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      #hostAliases:
      #- ip: "172.31.106.149"
      #  hostnames:
      #  - "db"
      containers:
      - name: c226-mvp
        image: magestore/apache-php:7.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        securityContext:
          allowPrivilegeEscalation: true
        volumeMounts:
        - name: demo-data
          mountPath: /var/www/html
          subPath: magento_c226_mvp
        #lifecycle:
        #  postStart:
        #    exec:
        #      command: ["sh", "-c", "chown -R 1000:1000 /var/www/html/var"]
      volumes:
      - name: demo-data
        persistentVolumeClaim:
          claimName: demo-nfs
