demo/nfs-volume.yaml
kind: Service
apiVersion: v1
metadata:
  name: nfs-provisioner
  labels:
    app: nfs-provisioner
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
    - name: rpcbind-udp
      port: 111
      protocol: UDP
  selector:
    app: nfs-provisioner
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-provisioner
spec:
  selector:
    matchLabels:
      app: nfs-provisioner
  serviceName: "nfs-provisioner"
  replicas: 1
  template:
    metadata:
      labels:
        app: nfs-provisioner
    spec:
      serviceAccount: nfs-provisioner
      terminationGracePeriodSeconds: 10
      containers:
        - name: nfs-provisioner
          image: quay.io/kubernetes_incubator/nfs-provisioner:latest
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
            - name: rpcbind-udp
              containerPort: 111
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - DAC_READ_SEARCH
                - SYS_RESOURCE
          args:
            - "-provisioner=example.com/nfs"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: ebs-volume
              mountPath: /export
      volumes:
        - name: export-volume
          hostPath:
            path: /srv
        - name: ebs-volume
          # This AWS EBS volume must already exist.
          awsElasticBlockStore:
            volumeID: vol-0b23167ebe94dfec2
            fsType: ext4
#---
#kind: StorageClass
#apiVersion: storage.k8s.io/v1
#metadata:
#  name: ebs-io1
#provisioner: kubernetes.io/aws-ebs
#parameters:
#  type: io1
#  iopsPerGB: "10"
#  fsType: ext4
#---
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: ebs-io1-claim
#spec:
#  accessModes:
#    - ReadWriteOnce
#  volumeMode: Filesystem
#  resources:
#    requests:
#      storage: 30Gi
#  storageClassName: ebs-io1
