demo/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    #nginx.ingress.kubernetes.io/auth-url: "URL to the authentication service"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$realip_remote_addr"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
spec:
  tls:
  - hosts:
    - demo-pos.magestore.com
    secretName: comodo-secret
  - hosts:
    - aus.demo-pos.magestore.com
    secretName: star-demo-pos
  rules:
  - host: demo-pos.magestore.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-pos-mvp
          servicePort: 80
  - host: aus.demo-pos.magestore.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-pos-aus
          servicePort: 80
  #- http:
  #    paths:
  #    - backend:
  #        serviceName: demo-pos-mvp
  #        servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: demo-pos-mvp
spec:
  selector:
    app: demo-pos-mvp
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
# aus.demo site
kind: Service
apiVersion: v1
metadata:
  name: demo-pos-aus
spec:
  selector:
    app: demo-pos-aus
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
